# Stocker

./: .gitattributes  Pipfile  README.md  Stock.py  Stocker_analyze.ipynb  Stocker_fetch_data.ipynb  Stocker_ta_data.ipynb  pyproject.toml  stocker.db  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: devcontainer.yml
.idx/: dev.nix
src/: app.py  app.ts
